--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.5",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
@@ -40,7 +42,7 @@
     "rules": {}
   },
   "browserslist": [
-    "> 1%",
+    "> 0.25%",
     "last 2 versions",
     "not dead"
   ]
